fix(AvatarList): Add spacing at the end
When the last item was anything else than link
avatar there was no margin at the end

--- a/packages/cozy-sharing/src/styles/recipient.styl
+++ b/packages/cozy-sharing/src/styles/recipient.styl
@@ -76,6 +76,5 @@
         svg
             fill: var(--genericRecipientColor)
 
-    &--plusX,
-    &--avatar
+    & > *:not(:first-child)
         margin-right -0.6rem
